--- a/templates/home.html
+++ b/templates/home.html
@@ -31,14 +31,13 @@ https://templatemo.com/tm-569-edu-meeting
 </head>
 
 <body>
-
   <!-- Sub Header -->
   <div class="sub-header">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-sm-8">
           <div class="left-content">
-            <p>This is an educational <em>HTML CSS</em> template by TemplateMo website.</p>
+            <p>This <em>University Portal</em> created by <em>Trinh, Khoi, Ratana, Kiet and Hieu.</em></p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4">
@@ -62,31 +61,52 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-12">
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
-            <a href="index.html" class="logo">
+            <a href="{% url "home" %}" class="logo">
               Edu Meeting
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-              <li><a href="meetings.html">Meetings</a></li>
-              <li class="scroll-to-section"><a href="#apply">Apply Now</a></li>
+              <li>
+                <a href="{% url "home" %}" class="active">Home</a>
+              </li>
+              <li>
+                <a href="{% url "list_academic_years" %}">Academic Years</a>
+              </li>
+              <li>
+                <a href="{% url "list_faculties" %}">Faculties</a>
+              </li>
               <li class="has-sub">
-                <a href="javascript:void(0)">Pages</a>
+                <a href="javascript:void(0)">Contributions</a>
                 <ul class="sub-menu">
                   {%for f in faculties%}
-                  <li><a href="{%url 'faculty_files' f.id%}">{{f.name}}</a></li>
+                  <li>
+                      <a href="{%url 'faculty_files' f.id%}">{{f.name}}</a>
+                  </li>
                   {%endfor%}
+                  <li>
+                      <a href="{%url 'show_contributions'%}">Download Contributions</a>
+                  </li>
+                  <li>
+                    <a href="{%url 'my_contributions'%}">View My</a>
+                  </li>
                 </ul>
               </li>
-              <li ><a href="{% url 'file_upload'%}">Upload file</a></li>
+              <li>
+                <a href="{% url 'file_upload'%}">Upload Contributions</a>
+              </li>
               {% if user.is_authenticated %}
               <!-- Display the form or user-specific content -->
-              <li ><a href="{%url 'profile' %}">hello {{request.user.username}}</a></li>
-              <li><a href="{% url 'logout'%}">Logout</a></li>
-
+              <li >
+                <a href="{%url 'profile' %}">hello {{request.user.username}}</a>
+              </li>
+              <li>
+                <a href="{% url 'logout'%}">Logout</a>
+              </li>
               {% else %}
-              <li><a href="{% url 'login' %}">Login</a></li>
+              <li>
+                <a href="{% url 'login' %}">Login</a>
+              </li>
               {% endif %}
             </ul>
             <a class='menu-trigger'>
