--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -2,34 +2,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="TemplateMo" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900"
-      rel="stylesheet"
-    />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="TemplateMo">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link
-      href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}"
-      rel="stylesheet"
-    />
+  <title>Education Meeting HTML5 Template</title>
 
-    <link rel="stylesheet" href="{% static 'css/fontawesome.css' %}" />
-    <link
-      rel="stylesheet"
-      href="{% static 'css/templatemo-edu-meeting.css' %}"
-    />
-    <link rel="stylesheet" href="{% static 'css/owl.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/lightbox.css' %}" />
+  <!-- Bootstrap core CSS -->
+  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="{% static 'css/fontawesome.css' %}">
+  <link rel="stylesheet" href="{% static 'css/templatemo-edu-meeting.css' %}">
+  <link rel="stylesheet" href="{% static 'css/owl.css' %}">
+  <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
 
     <style>
         body {
@@ -37,7 +26,7 @@
         }
 
         .profile-container {
-            max-width: 400px;
+            max-width: 450px;
             margin: auto;
             margin-top: 50px;
             padding: 20px;
@@ -66,43 +55,6 @@
     </style>
 </head>
 <body>
-    <!-- Sub Header -->
-    <div class="sub-header">
-      <div class="container">
-        <div class="row">
-          {% comment %}
-          <div class="col-lg-8 col-sm-8">
-            <div class="left-content">
-              <p>
-                This is an educational <em>HTML CSS</em> template by TemplateMo
-                website.
-              </p>
-            </div>
-          </div>
-          {% endcomment %} {% comment %}
-          <div class="col-lg-4 col-sm-4">
-            <div class="right-icons">
-              <ul>
-                <li>
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-behance"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          {% endcomment %}
-        </div>
-      </div>
-    </div>
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
       <div class="container">
@@ -110,38 +62,55 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index.html" class="logo"> Edu Meeting </a>
+              <a href="{% url "home" %}" class="logo">
+                Edu Meeting
+              </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li>
-                  <a href="{% url 'home' %}" class="active">Home</a>
+                  <a href="{% url "home" %}">Home</a>
                 </li>
-                <li><a href="meetings.html">Meetings</a></li>
-                <li class="scroll-to-section">
-                  <a href="#apply">Apply Now</a>
+                <li>
+                  <a href="{% url "list_academic_years" %}">Academic Years</a>
+                </li>
+                <li>
+                  <a href="{% url "list_faculties" %}">Faculties</a>
                 </li>
                 <li class="has-sub">
-                  <a href="javascript:void(0)">Pages</a>
+                  <a href="javascript:void(0)">Contributions</a>
                   <ul class="sub-menu">
                     {%for f in faculties%}
                     <li>
-                      <a href="{%url 'faculty_files' f.id%}">{{f.name}}</a>
+                        <a href="{%url 'faculty_files' f.id%}">{{f.name}}</a>
                     </li>
                     {%endfor%}
+                    <li>
+                        <a href="{%url 'show_contributions'%}">Download Contributions</a>
+                    </li>
+                    <li>
+                      <a href="{%url 'my_contributions'%}">View My</a>
+                    </li>
                   </ul>
                 </li>
-                <li><a href="{% url 'file_upload'%}">Upload file</a></li>
+                <li>
+                  <a href="{% url 'file_upload'%}">Upload Contributions</a>
+                </li>
                 {% if user.is_authenticated %}
                 <!-- Display the form or user-specific content -->
-                <li><a href="#courses">hello {{request.user.username}}</a></li>
-                <li><a href="{% url 'logout'%}">Logout</a></li>
-
+                <li >
+                  <a href="{%url 'profile' %}" class="active">hello {{request.user.username}}</a>
+                </li>
+                <li>
+                  <a href="{% url 'logout'%}">Logout</a>
+                </li>
                 {% else %}
-                <li><a href="{% url 'login' %}">Login</a></li>
+                <li>
+                  <a href="{% url 'login' %}">Login</a>
+                </li>
                 {% endif %}
               </ul>
-              <a class="menu-trigger">
+              <a class='menu-trigger'>
                 <span>Menu</span>
               </a>
               <!-- ***** Menu End ***** -->
@@ -154,7 +123,7 @@
 
     <section class="apply-now" id="apply">
         <div class="container profile-container">
-            <h1 class="mb-4">User Profile</h1>
+            <h1 class="mb-4">Update Information</h1>
         
             <!-- Personal Information Form -->
             <form id="profileForm" method="post">
@@ -209,8 +178,13 @@
       </div>
     </section>
 
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome (delete icon) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
+
+    <!-- Bootstrap JS and Popper.js are required for Bootstrap functionality -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.9/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
