--- a/templates/academic_years_form.html
+++ b/templates/academic_years_form.html
@@ -144,7 +144,11 @@
     <!-- ***** Header Area End ***** -->
 
     <section class="apply-now" id="apply">
-      <h2>Update Academic Year</h2>
+      {% if page == "create" %}
+        <h2>Create Academic Year</h2>
+      {% else %}
+        <h2>Update Academic Year</h2>
+      {% endif %}
       <form action="" method="post">
         {% csrf_token %}
         <div>
@@ -170,8 +174,11 @@
         </div>
         <br />
         <div class="text-center">
-          <!-- Center the button -->
-          <button type="submit" class="btn btn-primary">Update</button>
+          {% if page == "create" %}
+            <button type="submit" class="btn btn-primary">Create</button>
+          {% else %}
+            <button type="submit" class="btn btn-primary">Update</button>
+          {% endif %}
         </div>
       </form>
     </section>
