--- a/templates/my_contribution.html
+++ b/templates/my_contribution.html
@@ -96,9 +96,11 @@
                         </li>
                     </ul>
                 </li>
+                {% if can_upload %}
                 <li>
                   <a href="{% url 'file_upload'%}">Upload Contributions</a>
                 </li>
+                {% endif %}
                 {% if user.is_authenticated %}
                 <!-- Display the form or user-specific content -->
                 <li >
@@ -145,9 +147,13 @@
                   <td>{{ contribution.content|default:"No description provided" }}</td>
                   <td>{{ contribution.createAt|date:"H:i d-m-Y" }}</td>
                   <td>
-                      <a href="" class="btn btn-primary btn-sm">Update</a> | 
-                      <a href="" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');">Remove</a> | 
-                      <a href="" class="btn btn-warning btn-sm">View Detail</a>
+                      {% if can_update %}
+                      <a href="{% url 'update_contribution' pk=contribution.id %}" class="btn btn-primary btn-sm">Update</a> |  
+                      {% endif %}
+                      {% if can_upload %}
+                      <a href="{% url 'delete_contribution' contribution.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');">Remove</a> | 
+                      {% endif %}
+                      <a href="{% url "contributions_detail" contribution.id %}" class="btn btn-warning btn-sm">View Detail</a>
                   </td>
               </tr>
             {% empty %}
