--- a/templates/update_contribution.html
+++ b/templates/update_contribution.html
@@ -166,36 +166,39 @@
         <section onload="toggleUploadButton()">
           <!-- Call the function on page load to set the initial state of the button -->
           <h2 class="text-center text-white" style="margin: 20px">
-            Upload Contribution
+            Update Contribution
           </h2>
           <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-
-            <label for="id_title">Title:</label>
-            <input type="text" name="title" id="id_title" required />
-
-            <label for="id_content">Content:</label>
-            <textarea name="content" id="id_content" required></textarea>
-
-            <label for="id_faculty">Faculty:</label>
-            {% for faculty in faculties %}
-              <input type="text" id="id_faculty_display" value="{{ faculty.name }}" disabled />
-              <input type="hidden" name="faculty" value="{{ faculty.pk }}" />
-            {% endfor %}
-
-            <label for="id_word">Word Document (optional):</label>
-            <input type="file" name="word" id="id_word" accept=".doc, .docx" />
-
-            <label for="id_img">Image (optional):</label>
-            <input type="file" name="img" id="id_img" accept="image/*" />
-
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" value="{{ contribution.title }}" required><br> 
+            
+            <label for="content">Content:</label>
+            <textarea id="content" name="content" required>{{ contribution.content }}</textarea><br>
+        
+            
+        
+            <label for="word">Word Document (optional):</label>
+            {% if contribution_files.word %}
+              <a href="{{ contribution_files.word.url }}">Current File</a><br>
+            {% endif %}
+            <input type="file" id="word" name="word" accept=".doc, .docx"><br>
+        
+            <label for="img">Image (optional):</label>
+            {% if contribution_files.img %}
+              <a href="{{ contribution_files.img.url }}" alt="Current Image">Current Image</a><br>
+            {% endif %}
+            <input type="file" id="img" name="img" accept="image/*"><br>
+            
             <label for="id_term" name="term"><input
               type="checkbox"
               name="term"
-              id="id_term"
+              id="term"
               onclick="toggleUploadButton()"
+              {% if contribution.term %}checked{% endif %}
             /> I completely agree with the terms and policies.</label>
-            <input type="submit" value="Upload" id="uploadButton" />
+
+            <input type="submit" value="Update" id="uploadButton" />
           </form>
         </section>
       </div>
@@ -288,7 +291,7 @@
       });
 
       function toggleUploadButton() {
-        var checkBox = document.getElementById("id_term");
+        var checkBox = document.getElementById("term");
         var uploadButton = document.getElementById("uploadButton");
     
         if (checkBox.checked == true) {
